--- a/efsane.html
+++ b/efsane.html
@@ -30,7 +30,7 @@
     <h2>Klubümüz'de Forma Giymiş Olan Efsane Futbolcular</h2>
     <h3>Gheorghe Hagi</h3>
     <img
-      src="https://cdn.ntvspor.net//C/I//128/00273128_232038_636WA.jpg?w=1000"
+      src="https://gsgazetecom.teimg.com/crop/1280x720/gsgazete-com/uploads/2023/03/hagi-galatasaray.jpg"
       alt="Haginin galatasaray forması ile fotoğrafı"
       height="600"
       width="600"
